# escape-rooms-project

./: .gitignore
backend/: database.py  main.py  models.py  pyproject.toml
backend/api/: map_api.py  test_api.py
backend/scraper/: ai_description_generator.py  ai_room_scraper.py  google_places_scraper.py  image_scraper.py  room_scraper.py  venue_scraper.py
frontend/: package-lock.json  package.json  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/browse/: page.tsx
frontend/app/map/: page.tsx
frontend/app/rooms/[id]/: page.tsx
frontend/components/: MapView.tsx  RoomCard.tsx  RoomListItem.tsx  SiteHeader.tsx
frontend/lib/: api-client.ts  types.ts
